added search bar

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
   <div class="h3">
     <h3>Applet in Event Driven Programming</h3>
   </div>
-  
+
 <body>
-    
+    <form class ="form">     
+    <input type="search" id="query" name="q" placeholder="Search..." >
+    <button>Search</button>
+  </form>
+  
 </body>
 </html>
