--- a/index.html
+++ b/index.html
@@ -147,5 +147,17 @@
     </div>
   </div>
 </body>
-
+ 
+<script>
+    function search(event) {
+        event.preventDefault(); 
+        const query = document.getElementById('query').value;
+        if (query) {
+            
+            alert(`Searching for: ${query}`);
+        } else {
+            alert('Please enter a search term.');
+        }
+    }
+  </script>
 </html>
