added container for about.html

--- a/about.html
+++ b/about.html
@@ -43,8 +43,13 @@
       </nav>
   </nav>
 
-
 <body>
-    
+    <div class="container">
+        <h1>About Me</h1>
+        <p>Name: Sander Perejan</p>
+        <p>Age: 20 years old</p>
+        <p>Course: Bachelor of Science in Information Technology</p>
+    </div>
+   
 </body>
 </html>
