--- a/features.html
+++ b/features.html
@@ -60,7 +60,7 @@
 
 </head>
 
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"></nav>
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <!-- Navbar content -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
