--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
           margin-left: 28rem;
         }
     </style> 
-    
+
 </head>
 
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"></nav>
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <!-- Navbar content -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
