change the dropdown item from Applet Event to Applet 2 Leaflet Map and connect applet-2.html to index.html

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                   Applet
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Applet Event</a></li>
+                  <li><a class="dropdown-item" href="applet-2.html">Applet 2 Leaflet Map</a></li>
                   <li><a class="dropdown-item" href="#">Applet action</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
