--- a/applet-2.html
+++ b/applet-2.html
@@ -31,7 +31,7 @@
                   Applet
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Applet Event</a></li>
+                  <li><a class="dropdown-item" href="applet-2.html">Applet 2 Leaftlet Map</a></li>
                   <li><a class="dropdown-item" href="#">Applet action</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
