--- a/applet-2.html
+++ b/applet-2.html
@@ -14,7 +14,9 @@
             margin-left: 2rem;
             justify-content: center;
         }
-        
+        #map{
+            height: 600px;
+        }
     </style>
 </head>
 
