--- a/applet-2.html
+++ b/applet-2.html
@@ -8,18 +8,21 @@
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    
  
     <title>Applet 2 Leaflet</title>
 
     <style>
         .container{
-            width: 100%;
+            width: 95%;
             margin-top: 2rem;
             margin-left: 2rem;
             justify-content: center;
         }
         #map{
-            height: 600px;
+            width: 100%;
+            height: 450px;
+          
         }
     </style>
 </head>
@@ -59,10 +62,12 @@
   </nav>
 
 <body>
+
     <div class="container">
         <h2>Leaflet Map</h2>
         <div id="map"></div>
     </div>
 
 </body>
+<script src="applet-2.js"></script>
 </html>
