added style for body

--- a/applet-2.html
+++ b/applet-2.html
@@ -13,6 +13,10 @@
     <title>Applet 2 Leaflet</title>
 
     <style>
+        body{
+            background-color: rgb(0, 0, 0);
+            color: white;
+        }
         .container{
             width: 95%;
             margin-top: 2rem;
