--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="applet-2.html">Applet 2 Leaflet Map</a></li>
-                  <li><a class="dropdown-item" href="#">Applet action</a></li>
+                  <li><a class="dropdown-item" href="applet-3.html">Button Count</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
