--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <div class="card-body">
             <h5 class="card-title">Card 1</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="applet-3.html" class="btn btn-primary">Go somewhere</a>
 
           </div>
         </div>
