--- a/applet-3.html
+++ b/applet-3.html
@@ -45,6 +45,8 @@
       </nav>
   </nav>
 <body>
-    
+    <div class="applet-3">
+        <h1>Event Button Logger </h1>
+    </div>
 </body>
 </html>
