added style for applet-3

--- a/applet-3.html
+++ b/applet-3.html
@@ -9,6 +9,13 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <title>Document</title>
+    <style>
+        .applet-3{
+              margin-top: 2rem;
+              margin-left: 2rem;
+        }
+
+    </style>
 </head>
 
 <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
@@ -51,6 +58,9 @@
         <br>
         <button class="btn btn-primary" id="logButton">Click Me</button>
         <button class="btn btn-secondary"  id="clearButton">Clear</button>
+        <h2>Collected Data</h2>
+        <div id="idContainer" style="width: 20rem;"></div>
     </div>
 </body>
+<script src="applet-3.js"></script>
 </html>
