--- a/applet-3.html
+++ b/applet-3.html
@@ -14,7 +14,6 @@
               margin-top: 2rem;
               margin-left: 2rem;
         }
-
     </style>
 </head>
 
@@ -54,12 +53,13 @@
 <body>
     <div class="applet-3">
         <h1>Event Button Logger </h1>
-        <h3 class="logCount">Total Logs: </h3>
+        <h3 id="logCount">Total Logs: </h3>
         <br>
         <button class="btn btn-primary" id="logButton">Click Me</button>
         <button class="btn btn-secondary"  id="clearButton">Clear</button>
-        <h2>Collected Data</h2>
+        <h2>Collected Data: </h2>
         <div id="idContainer" style="width: 20rem;"></div>
+    
     </div>
 </body>
 <script src="applet-3.js"></script>
