added style for body

--- a/applet-3.html
+++ b/applet-3.html
@@ -10,6 +10,10 @@
 
     <title>Document</title>
     <style>
+        body {
+            background-color: black;
+            color: white;
+        }
         .applet-3{
               margin-top: 2rem;
               margin-left: 2rem;
