added h4 logCount and button for SC building

--- a/applet-2.html
+++ b/applet-2.html
@@ -55,7 +55,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="applet-2.html">Applet 2 Leaftlet Map</a></li>
-                  <li><a class="dropdown-item" href="applet-3.html">Button Count</a></li>
+                  <li><a class="dropdown-item" href="applet-3.html">Applet 3 Button Count</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
@@ -70,6 +70,8 @@
     <div class="container">
         <h2>Leaflet Map</h2>
         <div id="map"></div>
+        <h4 id="logCount">Attendance Count: </h4>
+        <button class="btn btn-primary" id="btn">SC Building</button>
     </div>
 
 </body>
