modified dropdown item

--- a/applet.html
+++ b/applet.html
@@ -71,7 +71,7 @@ body {
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Applet Event</a></li>
                   <li><a class="dropdown-item" href="#">Applet action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="applet-4.html">Applet 4 Search</a></li>
                 </ul>
               </li>
             </ul>
