--- a/applet-4.html
+++ b/applet-4.html
@@ -52,6 +52,8 @@
     <div class="input-group input-group-lg input-search">
         <span class="input-group-text">Search</span>
         <input type="text" class="form-control">
-      </div>
+    </div>
+      <div id="studentList"  style="margin-left: 3.5rem;"></div>
+      <div id="studentSearchList" style="margin-left: 3.5rem;"></div>
 </body>
 </html>
