modified style for div input search

--- a/applet-4.html
+++ b/applet-4.html
@@ -10,8 +10,10 @@
         body{
             background-color: rgb(29, 29, 29);
         }
-        .form-control{
-            margin-right: 50rem;
+        .input-search{
+            width: 40rem;
+            margin-top: 2rem;
+            margin-left: 1.5rem;
         }
     </style>
 </head>
