--- a/applet-4.html
+++ b/applet-4.html
@@ -53,9 +53,10 @@
 <body>
     <div class="input-group input-group-lg input-search">
         <span class="input-group-text">Search</span>
-        <input type="text" class="form-control">
+        <input type="text" id="studentSearchBar" class="form-control">
     </div>
       <div id="studentList"  style="margin-left: 3.5rem;"></div>
       <div id="studentSearchList" style="margin-left: 3.5rem;"></div>
 </body>
+<script src="applet-4.js"></script>
 </html>
