--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
           background-color: rgb(34, 33, 33);
           color: white; 
         }
-        .form-control{
-           margin-top: 2rem;
-           margin-right: 40rem;
-           color: #18f6fd;
-        }
         
          .container2 {
           font-family: Arial, Helvetica, sans-serif;
@@ -72,9 +67,15 @@
                 cursor: pointer; 
         }
         .h3 {
+          margin-top: 1.5rem;
           align-content: center;
           justify-content: center;
           margin-left: 28rem;
+        }
+
+        .input-search {
+        margin-left: 1.5rem;
+        width: 50%;
         }
     </style> 
 
@@ -118,10 +119,10 @@
   </div>
 
 <body>
-    <form class ="form">     
-    <input type="search" id="query" name="q" placeholder="Search..." >
-    <button>Search</button>
-  </form>
+   <div class="input-group input-group-lg input-search">
+        <span class="input-group-text">Search</span>
+        <input type="text" id="studentSearchBar" class="form-control">
+    </div>
    
   <div class="container2">
     <div class="row">
@@ -219,17 +220,4 @@
     </div>
   </div>
 </body>
- 
-<script>
-    function search(event) {
-        event.preventDefault(); 
-        const query = document.getElementById('query').value;
-        if (query) {
-            
-            alert(`Searching for: ${query}`);
-        } else {
-            alert('Please enter a search term.');
-        }
-    }
-  </script>
 </html>
