modified search bar

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
    <div class="input-group input-group-lg input-search">
         <span class="input-group-text">Search</span>
-        <input type="text" id="studentSearchBar" class="form-control">
+        <input type="text" id="cardSearch" class="form-control">
     </div>
    
   <div class="container2">
