--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="card">
           <img src="back.jpg" class="card-img-top" alt="" style="width: 100%; height: 8rem;">
           <div class="card-body">
-            <h5 class="card-name">Card 1</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="applet-3.html" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-name"> Applet 2 Leaflet Map</h5>
+            <p class="card-text">Provides the Leaflet Map in NBSC.</p>
+            <a href="applet-2.html" class="btn btn-primary">Click</a>
 
           </div>
         </div>
@@ -141,9 +141,9 @@
         <div class="card">
           <img src="back.jpg" class="card-img-top" alt="" style="width: 100%; height: 8rem;">
           <div class="card-body">
-            <h5 class="card-card-name">Card 2</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
+            <h5 class="card-card-name"> Applet 3 Event Button Logger</h5>
+            <p class="card-text" style="font-size: small;">Provides the button logger and monitored in every click.</p>
+           <a href="applet-3.html" class="btn btn-primary">Click</a>
           </div>
         </div>
       </div>
@@ -151,9 +151,9 @@
         <div class="card">
           <img src="back.jpg" class="card-img-top" alt="" style="width: 100%; height: 8rem;">
           <div class="card-body">
-            <h5 class="card-name">Card 3 </h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
+            <h5 class="card-name"> Applet 4 Dynamic Elements </h5>
+            <p class="card-text" style="font-size: small;">Provides a dynamic search to find the student list.</p>
+            <a href="applet-4.html" class="btn btn-primary">Click</a> 
           </div>
         </div>
       </div>
